cmake_minimum_required(VERSION 3.13)
project(myC__)

set(CMAKE_CXX_STANDARD 14)

add_executable(myC__
        loc.cpp
        main.cpp
        main1.cpp
        tree.cpp zuidaziduanhe.cpp zuidaziduanhe.h hanshu.cpp hanshu.h a.h b.cpp zuichanggonggongzixulie.cpp zuichanggonggongzixulie.h stackDemo.cpp stackDemo.h)
